Fix: Holding, Chart

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="theme-color" content="#ffffff">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<meta charset="utf-8">
-		<title>CENTCEX</title>
+		<title>Centcex-Portfolio</title>
 		<style>
 			:root {
 				--font-family:"Helvetica Neue", "Lucida Grande", "Tahoma", "Verdana", "Arial", sans-serif;
@@ -404,7 +404,7 @@
 	<body>
 		<div class="overlay hidden" id="overlay"></div>
 		<div class="description-wrapper hidden" id="description-wrapper">
-			<span>CENTCEX is an open-source, self-hosted, and cross-platform cryptocurrency portfolio application. Keep track of your assets, record transactions, and check the market with an entirely self-contained solution where your privacy is the top priority, and you control your data. Since Cryptofolio doesn't have a central server, and is entirely hosted on your device. Your data never leaves said device.</span>
+			<span>Centcex-Portfolio is an open-source, self-hosted, and cross-platform cryptocurrency portfolio application. Keep track of your assets, record transactions, and check the market with an entirely self-contained solution where your privacy is the top priority, and you control your data. Since Cryptofolio doesn't have a central server, and is entirely hosted on your device. Your data never leaves said device.</span>
 		</div>
 		<div class="background-padding"></div>
 		<svg class="background" viewBox="0 0 1440 324" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M 0 0 C 207.6 0 138.4 168 346 168 L 346 168 L 346 0 L 0 0 Z" stroke-width="0"></path> <path d="M 345 168 C 567 168 493 49 715 49 L 715 49 L 715 0 L 345 0 Z" stroke-width="0"></path> <path d="M 714 49 C 990.5999999999999 49 898.4000000000001 270 1175 270 L 1175 270 L 1175 0 L 714 0 Z" stroke-width="0"></path><path d="M 1174 270 C 1333.6 270 1280.4 50 1440 50 L 1440 50 L 1440 0 L 1174 0 Z" stroke-width="0"></path></svg>
