--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@
 	<script src="./assets/js/x-notify.js"></script>
 	<script src="./assets/js/api.js"></script>
 	<script src="./assets/js/main.js"></script>
-	<title>CENTCEX</title>
+	<title>Centcex-Portfolio</title>
 </head>
 
 <body>
@@ -361,7 +361,7 @@
 			</div>
 			<div class="description noselect">
 				<span>Using Ethplorer, the current balance of the tokens in your ETH wallet can be imported into
-					CENTCEX. Your Ethereum token holdings would either get added to your current holdings, or would
+					Centcex-Portfolio. Your Ethereum token holdings would either get added to your current holdings, or would
 					replace them depending on which option you choose. Tokens that aren't listed on CoinGecko would not
 					get added.</span>
 			</div>
@@ -381,7 +381,7 @@
 			<div class="description noselect">
 				<span>This progress bar displays how much storage space is left to store No-API mode data. Since the
 					No-API mode isn't meant for long-term use, there are no protections against the loss of data. If
-					there's no remaining storage, many of CENTCEX's functions may cease to work right. In such an event,
+					there's no remaining storage, many of Centcex-Portfolio's functions may cease to work right. In such an event,
 					it's recommended to export your data to keep it safe.</span>
 			</div>
 			<div class="bottom">
@@ -519,7 +519,7 @@
 				<button class="submit inline" id="show-qr-code-button">Show QR Code</button>
 			</div>
 		</div>
-		<div class="section">
+		<div class="section" style="display: none;">
 			<div class="top noselect">
 				<span class="title">Donate</span>
 			</div>
@@ -527,7 +527,7 @@
 				<span>If you'd like to donate, then please feel free to do so, it'd be much appreciated. However, I
 					don't want you to feel obliged to do so, and there are no perks for it. If you decide to donate,
 					please contact me afterwards so I can actually thank you, and I'd love to hear about any ideas you
-					may have for CENTCEX. If they're within the scope of the project, I'll probably implement
+					may have for Centcex-Portfolio. If they're within the scope of the project, I'll probably implement
 					them.</span>
 			</div>
 			<div class="bottom">
